refactor: replace ComponentLink with Link, make previous link class abstract